--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               <a class="nav-link" href="#">Contact Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Sign In</a>
+              <a class="nav-link" href="./register.html">Sign In</a>
             </li>
             
           </ul>
