--- a/login.html
+++ b/login.html
@@ -8,18 +8,18 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <title>Beauteous Jewels - Register</title>
+    <title>Beauteous Jewels - Login</title>
   </head>
   <body>
     
     <!--Header-->
     <nav class="navbar navbar-primary bg-primary mb-4">
       <div class="container-fluid text-center">
-        <a class=" navbar-brand text-center text-dark text-bold" href="#">Beauteous Jewels - Register</a>
+        <a class=" navbar-brand text-center text-dark text-bold" href="./index.html">Beauteous Jewels - Login</a>
       </div>
     </nav>
 
-        <div class="container w-50 border border-dark">
+        <div class="container w-90">
             <form action="/" method="post" class="form-group" autocomplete="on">
 
                 <div class="mb-4">
