--- a/register.html
+++ b/register.html
@@ -15,11 +15,14 @@
     <!--Header-->
     <nav class="navbar navbar-primary bg-primary mb-4">
       <div class="container-fluid text-center">
-        <a class=" navbar-brand text-center text-dark text-bold" href="#">Beauteous Jewels - Register</a>
+      
+        <a class=" navbar-brand text-center text-dark text-bold" href="./index.html">Beauteous Jewels - Register</a>  
+        
+
       </div>
     </nav>
 
-        <div class="container w-50 border border-dark">
+        <div class="container w-100">
             <form action="/" method="post" class="form-group" autocomplete="on">
                 <div class="mb-2">
                   <label for="nm">Name: </label>
@@ -57,9 +60,9 @@
                   <input type="file" name="file" id="fl" class="form-control mt-2" required>
                 </div>
 
-                <div class="mb-4">
-                  <input type="submit" value="Submit" class="btn btn-primary ps-2 mt-4">
-                  <input type="reset" value="Reset" class="btn btn-danger ps-2 mt-4">
+                <div class="mt-4 text-center">
+                  <input type="submit" value="Submit" class="btn btn-primary col-md-5 me-4">
+                  <input type="reset" value="Reset" class="btn btn-danger col-md-5">
                 </div>
             </form>
         </div>
