--- a/index.html
+++ b/index.html
@@ -8,42 +8,25 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Beautous Jewels</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <title>Beauteous Jewels</title>
   </head>
   <body>
     <!-- Navbar-->
-    <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light bgcolor">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="./index.html">Beauteous Jewels</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <a class="navbar-brand font-bold" href="#">Beauteous Jewels</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Products
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <li><a class="dropdown-item" href="#">Necklaces & Rings</a></li>
-                <li><a class="dropdown-item" href="#">Studs</a></li>
-                <li><a class="dropdown-item" href="#">Srunchies</a></li>
-              </ul>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#exampleModal" data-bs-toggle="modal" data-bs-target="#exampleModal">About Us</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contact Us</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./register.html">Sign In</a>
-            </li>
-            
-          </ul>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link active font-bold ms-2" aria-current="page" href="#">Home</a>
+            <a class="nav-link font-bold ms-2" href="#">Products</a>
+            <a class="nav-link font-bold ms-2" data-bs-toggle="modal" data-bs-target="#exampleModal" href="#exampleModal">About us</a>
+            <a class="nav-link font-bold ms-2" href="">Contact Us</a>
+            <a class="nav-link font-bold ms-2" href="./login.html">Sign In</a>
+          </div>
         </div>
       </div>
     </nav>
@@ -82,22 +65,53 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">About Us</h5>
+        <h5 class="modal-title font-kadwa-bold" id="exampleModalLabel">About Us</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
         <div class="container-fluid">
-            <h4>Welcome to Beauteous Jewels.</h4>
-        </div>
+          <div class="mb-6">
+          <div class="container">
+            <center><img src="./images/logo.png" alt="abtus"></center>
+            <br><h4 class="font-bold">Welcome to Beauteous Jewels. </h4></div></br>
+             <p class="font-regular">This startup was Established in 2020. <br>This jewellery page will make you feel like beauteous<p>
+          </div>
+          </div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
       </div>
     </div>
   </div>
 </div>
+
 <!-- End of About Us Modal-->
+
+<!--Footer -->
+  <!-- Site footer -->
+  <footer class="site-footer bg-dark mt-4">
+    <div class="container">
+      <div class="row">
+        <div class="container text-center font-regular">
+          Welcome to Beauteous Jewels fam!. This startup was Established in 2020. <br>This jewellery page will make you feel like beauteous.
+        </div>
+        <hr>
+        <div class="col-md-8 col-sm-6 col-xs-12">
+          <p class="copyright-text font-bold">Designed and Developed by 
+       <a href="./index.html">Beauteous Jewels</a>.
+          </p>
+        </div>
+        <div class="col-md-4 col-sm-6 col-xs-12">
+          <ul class="social-icons">
+            <li><a class="facebook" href="#"><i class="bi bi-facebook"></i></a></li>
+            <li><a class="instagram" href="https://www.instagram.com/beauteous_jewels/"><i class="bi bi-instagram"></i></a></li>   
+          </ul>
+        </div>
+      </div>
+    </div>
+  </footer>
+
+  <!-- End of Footer-->
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
