--- a/login.html
+++ b/login.html
@@ -34,7 +34,7 @@
                 </div>
 
                 <div class="mb-4">
-                  <input type="submit" value="Login" class="btn btn-primary ps-2">
+                  <input type="submit" value="Login" class="btn btn-primary ps-2 col-md-12">
                 </div>
             </form>
         </div>
